# DFT

./: .gitignore  DFT_CONTEXT_TOP8.md  FOLLOWUP_LINUX.md  OGHMA_DEBUG_CONTEXT.md  PROJECT_CONTEXT.md  README.md  main.py  pyproject.toml  requirements.txt  results_report.md  run_hse06_nsc_dos.py  siteconfig.py
.claude/: settings.json  settings.local.json
analytics/: __init__.py  metrics.py
configs/: default_params.yaml  surrogate.yaml  top8_pbe.yaml  top8_r2scan.yaml
data/: build_training_dataset.py  dielectric_lit.csv  meff_lit.csv  mp_abx3.json  surrogate_training.csv
docs/: pipeline_architecture.md
generador fv/: OGHMA_DEBUG_CONTEXT.md  README_GENERADOR_FV.md
imagenes/: visualization_manifest.json
migration/: 00_context.md  01_inventory.md  02_migration_plan.md  03_claude_patch_notes.md  04_codex_review.md  05_test_matrix.md  06_final_report.md  bitacora.md
models/: surrogate_bandgap.metrics.json  surrogate_eps_inf.metrics.json  surrogate_meff_e.metrics.json  surrogate_meff_h.metrics.json
scripts/: ai_pipeline_top8.py  ai_spectra_top8.py  analyze_existing.py  apply_scissor.py  band_calc.py  g0w0_groundstate.py  g0w0_run.py  g0w0_soc.py  generate_report.py  generate_visualizations.py  gpaw_monitor.py  install_oghma_ubuntu.sh  monitor_dft_runs.sh  preconv_pbe_u.py  run_convergence_test.py  run_full_workflow.py  run_g0w0_pipeline.sh  run_pending.sh  run_top8_auto.sh  setup_top8_pbe.py  setup_top8_r2scan.py  status_report.sh  supervise_top8_auto.sh  top8_drift_diffusion.py  top8_figures.py  train_meff_dielectric.py  u_ramp_r2scan.py  u_scan_pdos.py  u_scan_r2scan.py  u_scan_soc_dos.py
structures/: alpha_cubic.json  beta_tetra.json  delta_ortho.json  (+1 more)
(+107888 files in other folders)
